# OpenMVG_grpc

./: .gitignore  CMakeLists.txt  README.md
grpcsrc/: CMakeLists.txt  gps_distance.h  main.cc  masterworker.grpc.pb.cc  masterworker.grpc.pb.h  masterworker.pb.cc  masterworker.pb.h  masterworker.proto  node.cc  nodeclient.cc  nodeclients.cc  nodeone.cc  nodeserver.cc  nodeservers.cc
openMVG/: CMakeLists.txt
openMVG/exif/sensor_width_database/: sensor_width_camera_database.txt
